# kardanai

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-base  README.md  ansible.yml  do-create-droplet.sh  do-startup.sh  doc_processor.py  document_export.py  json2text.py  llm.py  main-document-processor.py  main.py  prompt.py  prompt_similarity_checker.py  pyproject.toml
.github/workflows/: ci.yml  status.yml
data-public/ukr_laws/: constitution-ru.txt
data-test/constitution/processed/ukr_laws/: ukr.txt
data-test/processed/summarization/: qwen2.5:7b-instruct-fp16-token-splitter-constitution.txt
data-test/processed/ukr_laws/: constitution-ru.txt.bak
deploy/: ansible-dockerfile.yml  ansible-host-startup.yml  check_startup.sh  do-create-droplet.sh  do-delete-host.sh  do-startup-dockerfile.sh  do-startup.sh  entrypoint.sh
odm/: helper.py  structure.py
train/: ask_model.py  ask_model2.py  context_lenght_distribution_print.txt  custom_metrics.py  log_eval_callback.py  original_dataset_loader.py  qa_dataset_loader.py  qa_dataset_loader_v2.py  test.py  train.py  train_v1.py  train_v2.py  trainer_config.py  training_configs.yaml
train/ask/: ask_qwen.py
train/v2/: qa_dataset_loader_v2.py
utils/: byte2text.py  chat_templates.py  document_export.py  gcp_worker.py  save_model_artifact.py
