[tool.poetry]
name = "topic"
version = "0.1.0"
description = ""
authors = ["Max Peshkov <me@peshkovmax.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
bertopic = "^0.16.4"
tqdm = "^4.67.1"
spacy = "^3.8.4"
llama-index = "^0.12.11"
llama-index-embeddings-huggingface = "^0.5.0"
llama-index-llms-ollama = "^0.5.0"
sentencepiece = "^0.2.0"
protobuf = "^5.29.3"
accelerate = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
