[tool.poetry]
name = "topic"
version = "0.1.0"
description = ""
authors = ["Max <me@max.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.*"
llama-index = "^0.12.11"
llama-index-embeddings-huggingface = "^0.5.0"
llama-index-llms-ollama = "^0.5.0"
llvmlite = "^0.43.0"
motor = "^3.6.1"
llama-index-storage-docstore-mongodb = "^0.3.0"
llama-index-llms-anthropic = "^0.6.4"
beanie = "^1.29.0"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.26.1"
ratelimit = "^2.2.1"
datasets = "^3.2.0"
peft = "^0.14.0"
torch-tb-profiler = "^0.4.3"
deptry = "^0.23.0"
google-cloud-storage = "^3.0.0"
torch = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
